--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,9 +25,7 @@ stages:
         targetType: 'inline'
         script: |
           echo 'Compiling'
-          pwd
-          ls -l
-          gcc linux/shared-mem/get/get.c -o linux/shared-mem/get/get
+          gcc linux/shared-mem/get/get.c -lrt -o linux/shared-mem/get/get
     - task: Docker@2
       displayName: Build an image
       inputs:
