--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,13 +33,13 @@ stages:
         dockerfile: '$(Build.SourcesDirectory)/linux/shared-mem/get/Dockerfile'
         tags: |
           $(tag)
+          stuff
     - task: Bash@3
       inputs:
         targetType: 'inline'
         script: |
           echo 'Saving container'
-          docker images          
-          ' docker save -o $(Build.ArtifactStagingDirectory) <image name>
+          docker save -o $(Build.ArtifactStagingDirectory) stuff
     - task: PublishBuildArtifacts@1
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
