--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ resources:
 
 variables:
   tag: '$(Build.BuildId)'
-  build-name: '$(Date:yyyyMMdd)$(Rev:.r)'
+  buildname: '$(Date:yyyyMMdd)$(Rev:.r)'
 
 stages:
 - stage: Build
@@ -41,7 +41,7 @@ stages:
         script: |
           echo 'Saving container'
           docker images
-          docker save -o $(Build.ArtifactStagingDirectory)/docker-get-$(build-name).tar docker-get
+          docker save -o $(Build.ArtifactStagingDirectory)/docker-get-$(buildname).tar docker-get
     - task: PublishBuildArtifacts@1
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
